--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,28 +1,13 @@
 <!doctype html>
-<html>
-<head>
-  <meta charset="utf-8">
-  <title>ToDo Distribuído</title>
-  <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    input, textarea { width: 100%; margin: 4px 0; padding: 8px; }
-    .todo { border:1px solid #ddd; padding:10px; margin:8px 0; border-radius:6px; }
-    .done { text-decoration: line-through; color: #777; }
-    button { padding:8px 12px; }
-  </style>
-</head>
-<body>
-  <h2>ToDo Distribuído</h2>
-
-  <div>
-    <input id="title" placeholder="Título">
-    <textarea id="description" placeholder="Descrição"></textarea>
-    <button onclick="create()">Adicionar</button>
-  </div>
-
-  <h3>Tarefas</h3>
-  <div id="list"></div>
-
-  <script src="app.js"></script>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>frontend</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
