--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,27 +1,43 @@
+<!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="stylesheet" href="./css/login.css" />
-<title>Login - Notes</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login - Minhas Notas</title>
+
+    <!-- CSS Global -->
+    <link rel="stylesheet" href="./css/login.css" />
+    <link rel="stylesheet" href="./css/toast.css" />
 </head>
+
 <body>
-<div class="login-card">
-<img src="./img/logo_notesApp.png" class="logo" />
-<h2>Entrar</h2>
+    <div class="login-container">
+        <div class="login-card">
 
+            <h1 class="login-title">Seja Bem Vindo</h1>
+            <p class="login-subtitle">Acesse sua conta para continuar</p>
 
-<input id="email" placeholder="Email" type="email" />
-<input id="password" placeholder="Senha" type="password" />
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="text" id="email" placeholder="Digite seu email" />
+            </div>
 
+            <div class="form-group">
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" placeholder="Digite sua senha" />
+            </div>
 
-<button onclick="login()">Entrar</button>
+            <button class="btn-login" onclick="loginUser()">Entrar</button>
 
+            <div class="link">
+                Primeira vez usando o Minhas Notas?
+             <a href="register.html">Cadastre-se</a>
+            </div>
 
-<div id="loginError" class="error hidden">Email ou senha inválidos</div>
-</div>
+        </div>
+    </div>
 
-
-<script src="./js/login.js"></script>
+    <script src="./js/toast.js"></script>
+    <script src="./js/login.js"></script>
 </body>
 </html>
