--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -3,96 +3,77 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dashboard - Notas</title>
-
-    <!-- TailwindCSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Toast -->
-    <style>
-        #toast {
-            transition: opacity .4s ease;
-        }
-    </style>
+    <title>Minhas Notas</title>
+    <link rel="stylesheet" href="./css/dashboard.css">
+    <link rel="stylesheet" href="https://unpkg.com/lucide-static@latest/font/lucide.css">
 </head>
+<body>
+    <!-- ========== HEADER ========== -->
+    <header class="header">
+        <div class="header-left">
+            <img src="./img/logo_notesApp.png" alt="logo">
+            <div>
+                <div class="header-title">Minhas Notas</div>
+            </div>
+        </div>
 
-<body class="bg-gray-100 min-h-screen">
-
-    <!-- NAVBAR -->
-    <nav class="bg-white shadow-md p-4 flex justify-between items-center">
-        <h1 class="text-2xl font-bold text-purple-700">Minhas Notas</h1>
-
-        <button onclick="logoutUser()"
-                class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600">
+        <button class="btn-logout" onclick="logoutUser()">
+            <i data-lucide="log-out"></i>
             Sair
         </button>
-    </nav>
+    </header>
 
-    <!-- CONTAINER -->
-    <main class="max-w-4xl mx-auto mt-8 px-4">
+    <!-- ========== ÁREA PRINCIPAL ========== -->
+    <main class="container">
+        <!-- Caixa de busca -->
+        <div class="search-area">
+            <input class="input-dark" placeholder="Buscar notas por titulo..." id="searchInput">
 
-        <!-- SEARCH + ADD -->
-        <div class="flex items-center gap-3 mb-6">
-            <input id="searchInput"
-                   type="text"
-                   placeholder="Buscar nota..."
-                   class="flex-1 p-2 border rounded">
-
-            <button id="btnClear"
-                    onclick="clearSearch()"
-                    class="hidden bg-gray-400 text-white px-3 py-2 rounded">
-                Limpar
+            <button class="btn-primary" id="btnSearch" onclick="searchNotes()">
+                <i data-lucide="search"></i> Buscar
             </button>
 
-            <button onclick="openModal()"
-                    class="bg-purple-600 text-white px-4 py-2 rounded hover:bg-purple-700">
-                Nova Nota
+            <button class="btn-clear hidden" id="btnClear" onclick="clearSearch()">
+                <i data-lucide="x"></i> Limpar
+            </button>
+
+            <button class="btn-secundary" id="btnNewNote" onclick="openModal()">
+                <i data-lucide="plus"></i> Nova Nota
             </button>
         </div>
 
-        <!-- NOTES GRID -->
-        <div id="notesGrid"
-             class="grid grid-cols-1 md:grid-cols-2 gap-4">
+        <!-- Lista de notas -->
+        <div id="notesGrid" class="notes-grid">
+            <!-- Gerado via JS -->
         </div>
     </main>
 
-    <!-- MODAL -->
-    <div id="noteModal"
-         class="hidden fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center">
+    <!-- ========== MODAL DE CRIAÇÃO/EDIÇÃO ========== -->
+    <div id="noteModal" class="modal hidden">
+        <div class="modal-content">
+            <h2 id="modalTitle">Nova Nota</h2>
 
-        <div class="bg-white shadow-lg rounded p-6 w-96">
+            <label for="modalTitleInput">Título</label>
+            <input type="text" id="modalTitleInput" placeholder="Digite o titulo da nota...">
 
-            <h2 id="modalTitle" class="text-xl font-bold mb-4"></h2>
+            <label for="modalContentInput">Conteúdo</label>
+            <textarea id="modalContentInput" placeholder="Escreva o conteudo da sua nota..."></textarea>
 
-            <input id="modalTitleInput"
-                   type="text"
-                   placeholder="Título"
-                   class="w-full p-2 border rounded mb-3">
-
-            <textarea id="modalContentInput"
-                      placeholder="Conteúdo"
-                      class="w-full p-2 border rounded mb-4 h-32"></textarea>
-
-            <div class="flex justify-end gap-2">
-                <button onclick="closeModal()"
-                        class="px-4 py-2 bg-gray-300 rounded">
-                    Cancelar
-                </button>
-
-                <button onclick="saveNote()"
-                        class="px-4 py-2 bg-purple-600 text-white rounded">
-                    Salvar
-                </button>
+            <div class="modal-buttons">
+                <button class="btn-cancel" onclick="closeModal()">Cancelar</button>
+                <button class="btn-save" onclick="saveNote()">Salvar</button>
             </div>
         </div>
     </div>
 
-    <!-- TOAST -->
-    <div id="toast"
-         class="hidden fixed bottom-4 right-4 bg-purple-600 text-white px-4 py-2 rounded shadow">
-    </div>
+    <!-- ========== TOAST ========== -->
+    <div id="toast" class="toast hidden"></div>
 
-    <!-- JS -->
-    <script src="js/dashboard.js"></script>
+    <!-- Scripts -->
+    <script src="https://unpkg.com/lucide@latest/dist/umd/lucide.min.js"></script>
+    <script>
+        lucide.createIcons();
+    </script>
+    <script src="./js/dashboard.js"></script>
 </body>
 </html>
