--- a/frontend/register.html
+++ b/frontend/register.html
@@ -35,16 +35,12 @@
                     <input type="password" id="password" placeholder="Digite sua senha" required>
                 </div>
 
-                <div class="input-group">
-                    <label for="confirm">Confirmar Senha</label>
-                    <input type="password" id="confirm" placeholder="Repita sua senha" required>
-                </div>
 
                 <button type="submit" class="btn-login">Criar Conta</button>
 
                 <div class="link">
                     Já possui conta?
-                    <a href="login.html">Fazer Login</a>
+                    <a href="./login.html">Fazer Login</a>
                 </div>
 
             </form>
